--- a/br-webui/views/system.liquid
+++ b/br-webui/views/system.liquid
@@ -377,6 +377,8 @@ socket.on('getmav', function(data) {
     setInterval(queryAllDeviceTypes, 3000);
 </script>
 
+
+
 <h1>Software Status and Update</h1>
 <!-- Companion Computer Status -->
 <div class="row">
@@ -423,7 +425,7 @@ socket.on('getmav', function(data) {
                     <dt>pingproxy: </dt>
                                                 <dd id="pingproxy"></dd>
                                 </dl>
-            <div id="serviceContent"></div>
+            <div id="screenContent"></div>
             <div id="deviceContent"></div>
             </div>
         </div>
