--- a/br-webui/views/system.liquid
+++ b/br-webui/views/system.liquid
@@ -263,22 +263,19 @@ socket.on('getmav', function(data) {
 
         "Video" : {
             "searchPattern":"/dev/video*",
-            "queryCallback":handleVideoDevices,
             "devices": {}
         },
         "Audio" : {
             "searchPattern":"/dev/snd/*",
-            "queryCallback":handleAudioDevices,
             "devices": {}
         },
         "Serial" : {
             "searchPattern":"/dev/serial/by-id/*",
-            "queryCallback":handleSerialDevices,
             "devices": {}
         }
     }
 
-    function queryUsb(pattern, callback) {
+    function queryUdevadm(pattern, callback) {
         var xhr = new XMLHttpRequest();
         var query = "?pattern=" + pattern;
         console.log("query", query);
@@ -289,8 +286,8 @@ socket.on('getmav', function(data) {
         xhr.send();
     }
 
-    function handleResponse(deviceType, response) {
-        console.log("got query response", deviceType, response);
+    function handleUdevadmResponse(deviceType, response) {
+        console.log("got udevadm query response", deviceType, response);
         // response.target refers to the XMLHttpRequest object ('xhr')
         // wait for readyState == 4 ~ "Done"
         if (response.target.readyState != 4) {
@@ -304,30 +301,33 @@ socket.on('getmav', function(data) {
         for (device in usbInfo.devices) {
             var deviceInfo = usbInfo.devices[device];
 
-            var modelInfo = deviceInfo["udev-info"]["ID_MODEL"];
+            var modelInfo = deviceInfo["udevInfo"]["ID_MODEL"];
 
             if (!modelInfo) {
-                modelInfo = deviceInfo["udev-info"]["ID_V4L_PRODUCT"]; // pi camera does not have ID_MODEL
+                modelInfo = deviceInfo["udevInfo"]["ID_V4L_PRODUCT"]; // pi camera does not have ID_MODEL
             }
 
             if (modelInfo) {
                 if (modelInfo in deviceList === false) {
-                    deviceList[modelInfo] = deviceInfo["companion-device"];
+                    deviceList[modelInfo] = deviceInfo["companionDevice"];
                 }
             }
         }
 
         companionDevices[deviceType].devices = deviceList;
 
-        updateHtmlContent();
+        updateDeviceContent();
     }
 
     // TODO figure this out w simpler? css
-    function updateHtmlContent() {
+    function updateDeviceContent() {
         var deviceContent = document.getElementById("deviceContent");
+
+        // clear existing content
         while (deviceContent.hasChildNodes()) {
             deviceContent.removeChild(deviceContent.lastChild);
         }
+
         for (deviceType in companionDevices) {
             var h = document.createElement("h4");
             h.innerHTML = deviceType + " Devices:";
@@ -353,22 +353,11 @@ socket.on('getmav', function(data) {
         }
     }
 
-    function handleSerialDevices(result) {
-        handleResponse("Serial", result);
-    }
-
-    function handleVideoDevices(result) {
-        handleResponse("Video", result);
-    }
-
-    function handleAudioDevices(result) {
-        handleResponse("Audio", result);
-    }
-
     function queryAllDeviceTypes() {
-
-        for (deviceType in companionDevices) {
-            queryUsb(companionDevices[deviceType].searchPattern, companionDevices[deviceType].queryCallback);
+        for (let deviceType in companionDevices) {
+            queryUdevadm(companionDevices[deviceType].searchPattern, function(response) {
+                handleUdevadmResponse(deviceType, response);
+            });
         }
     }
 
@@ -378,7 +367,8 @@ socket.on('getmav', function(data) {
 </script>
 
 <script>
-    var companionScreens = {
+   var companionScreens = {
+        "root" : [],
         "pi" : []
     }
 
@@ -393,21 +383,22 @@ socket.on('getmav', function(data) {
         xhr.send();
     }
 
-    function handleResponse(deviceType, response) {
+    function handleScreensResponse(user, response) {
         if (response.target.readyState != 4) {
             return null;
         }
-        console.log("got query response", deviceType, response);
+
+        console.log("got screens query response", user, response);
 
         jsonReply = JSON.parse(response.target.response);
         
         companionScreens[jsonReply.user] = jsonReply.screens
 
-        updateHtmlContent();
+        updateScreensContent();
     }
 
     // TODO figure this out w simpler? css
-    function updateHtmlContent() {
+    function updateScreensContent() {
         var screenContent = document.getElementById("screenContent");
         while (screenContent.hasChildNodes()) {
             screenContent.removeChild(screenContent.lastChild);
@@ -429,8 +420,8 @@ socket.on('getmav', function(data) {
     }
 
     for (let user in companionScreens) {
-        queryScreens(user, function (res) {
-            return handleResponse(user, res);
+        queryScreens(user, function (response) {
+            handleScreensResponse(user, response);
         });
     }
 </script>
