--- a/br-webui/views/system.liquid
+++ b/br-webui/views/system.liquid
@@ -253,7 +253,188 @@ socket.on('getmav', function(data) {
 	document.getElementById('driver').innerHTML = data.driver;
 	document.getElementById('pingproxy').innerHTML = data.pingproxy;
 });
+</script>
 
+
+
+<script>
+    var companionDevices =
+    {
+
+        "Video" : {
+            "searchPattern":"/dev/video*",
+            "devices": {}
+        },
+        "Audio" : {
+            "searchPattern":"/dev/snd/*",
+            "devices": {}
+        },
+        "Serial" : {
+            "searchPattern":"/dev/serial/by-id/*",
+            "devices": {}
+        }
+    }
+
+    function queryUdevadm(pattern, callback) {
+        var xhr = new XMLHttpRequest();
+        var query = "?pattern=" + pattern;
+        console.log("query", query);
+
+        xhr.open("GET", "/udevadm" + query, true);
+
+        xhr.addEventListener("readystatechange", callback, true);
+        xhr.send();
+    }
+
+    function handleUdevadmResponse(deviceType, response) {
+        // response.target refers to the XMLHttpRequest object ('xhr')
+        // wait for readyState == 4 ~ "Done"
+        if (response.target.readyState != 4) {
+            return null;
+        }
+
+        console.log("got udevadm query response", deviceType, response);
+
+        usbInfo = JSON.parse(response.target.response);
+        
+        var deviceList = {};
+
+        for (device in usbInfo.devices) {
+            var deviceInfo = usbInfo.devices[device];
+
+            var modelInfo = deviceInfo["udevInfo"]["ID_MODEL"];
+
+            if (!modelInfo) {
+                modelInfo = deviceInfo["udevInfo"]["ID_V4L_PRODUCT"]; // pi camera does not have ID_MODEL
+            }
+
+            if (modelInfo) {
+                if (modelInfo in deviceList === false) {
+                    deviceList[modelInfo] = deviceInfo["companionDevice"];
+                }
+            }
+        }
+
+        companionDevices[deviceType].devices = deviceList;
+
+        updateDeviceContent();
+    }
+
+    // TODO figure this out w simpler? css
+    function updateDeviceContent() {
+        var deviceContent = document.getElementById("deviceContent");
+
+        // clear existing content
+        while (deviceContent.hasChildNodes()) {
+            deviceContent.removeChild(deviceContent.lastChild);
+        }
+
+        var sectionHeading = document.createElement("h3");
+        sectionHeading.innerHTML = "Detected Devices:";
+        deviceContent.appendChild(sectionHeading);
+
+        for (deviceType in companionDevices) {
+            var h = document.createElement("h4");
+            h.innerHTML = deviceType + " Devices:";
+
+            var ul = document.createElement("ul");
+            for (device in companionDevices[deviceType]["devices"])
+            {
+                var li = document.createElement("li");
+                var companionString = "";
+                if (companionDevices[deviceType]["devices"][device]) {
+                    companionString = " (" + companionDevices[deviceType]["devices"][device] + ")";
+                }
+                li.innerHTML = device + companionString;
+                ul.appendChild(li);
+            }
+
+            if (!ul.hasChildNodes()) {
+                h.innerHTML += " None!";
+            }
+
+            deviceContent.appendChild(h);
+            deviceContent.appendChild(ul);
+        }
+    }
+
+    function queryAllDeviceTypes() {
+        for (let deviceType in companionDevices) {
+            queryUdevadm(companionDevices[deviceType].searchPattern, function(response) {
+                handleUdevadmResponse(deviceType, response);
+            });
+        }
+    }
+
+    queryAllDeviceTypes();
+
+    setInterval(queryAllDeviceTypes, 3000);
+</script>
+
+<script>
+   var companionScreens = {
+        "pi" : []
+    }
+
+    function queryScreens(user, callback) {
+        var xhr = new XMLHttpRequest();
+        var query = "?user=" + user;
+        console.log("query", query);
+
+        xhr.open("GET", "/screen" + query, true);
+
+        xhr.addEventListener("readystatechange", callback, true);
+        xhr.send();
+    }
+
+    function handleScreensResponse(user, response) {
+        if (response.target.readyState != 4) {
+            return null;
+        }
+
+        console.log("got screens query response", user, response);
+
+        jsonReply = JSON.parse(response.target.response);
+        
+        companionScreens[jsonReply.user] = jsonReply.screens
+
+        updateScreensContent();
+    }
+
+    // TODO figure this out w simpler? css
+    function updateScreensContent() {
+        var screenContent = document.getElementById("screenContent");
+        while (screenContent.hasChildNodes()) {
+            screenContent.removeChild(screenContent.lastChild);
+        }
+        for (user in companionScreens) {
+            var h = document.createElement("h3");
+            h.innerHTML = "Services running for user " + user + ":";
+            var ul = document.createElement("ul");
+            for (screen in companionScreens[user])
+            {
+                var li = document.createElement("li");
+
+                li.innerHTML = companionScreens[user][screen]["idName"];
+
+                ul.appendChild(li);
+            }
+            screenContent.appendChild(h);
+            screenContent.appendChild(ul);
+        }
+    }
+
+    function queryAllScreens() {
+        for (let user in companionScreens) {
+            queryScreens(user, function (response) {
+                handleScreensResponse(user, response);
+            });
+        }
+    }
+
+    queryAllScreens();
+
+    setInterval(queryAllScreens, 3000);
 </script>
 
 <h1>Software Status and Update</h1>
@@ -302,9 +483,11 @@ socket.on('getmav', function(data) {
 					<dt>pingproxy: </dt>
                                                 <dd id="pingproxy"></dd>
                                 </dl>
-			</div>
-		</div>
-	</div>
+            <div id="screenContent"></div>
+            <div id="deviceContent"></div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="row">
